[tool.poetry]
name = "service-status-checker"
version = "1.0.0"
description = ""
authors = ["MatrixEternal <35934418+MatrixEternal@users.noreply.github.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
